draft-packages/badge/KaizenDraft/Badge/styles.module.scss
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/typography";
@import "~@kaizen/design-tokens/sass/spacing";
@import "~@kaizen/component-library/styles/type";
@import "~@kaizen/design-tokens/sass/animation";
@import "~@kaizen/component-library/styles/animation";

$small: $ca-grid;

.badge {
  @include ca-inherit-baseline;
  border-radius: $kz-spacing-sm;
  color: $kz-color-wisteria-800;
  display: inline-block;
  position: relative;
  font-family: $kz-typography-paragraph-extra-small-font-family;
  font-size: $kz-typography-paragraph-extra-small-font-size;
  font-weight: $kz-typography-paragraph-bold-font-weight;
  letter-spacing: $kz-typography-paragraph-extra-small-letter-spacing;
  line-height: $kz-typography-paragraph-extra-small-line-height;
  padding: 1px $kz-spacing-xs;
  min-width: 8px;
  text-align: center;
  z-index: 2;
}

.default {
  background-color: $kz-color-wisteria-200;
  color: $kz-color-wisteria-800;
}

.reversed.active,
.active {
  background-color: $kz-color-cluny-500;
  color: $kz-color-white;
}

.dark {
  background-color: rgba($kz-color-wisteria-700, 0.1);
  color: $kz-color-wisteria-800;
}

.reversed.dark {
  background-color: $kz-color-wisteria-700;
  color: $kz-color-white;
}

.reversed {
  background-color: rgba($kz-color-white, 0.1);
  color: $kz-color-white;
}

$badge-duration-timing: ($kz-animation-duration-slow / 2)
  $kz-animation-easing-function-ease-in;

$badge-transition: transform $badge-duration-timing,
  background-color $badge-duration-timing;

.animation {
  display: inherit;
  .badge {
    transition: $badge-transition;
    transform-origin: center;
    transform: scale3d(1, 1, 1);
  }
  &.animationOn .badge {
    transform: scale3d(1.35, 1.35, 1.35);
    &.dark {
      background-color: rgba($kz-color-wisteria-700, 0.2);
    }
  }
}

